Z-index fix

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -330,11 +330,12 @@ body {
 }
 
 .attached-info { /* usato per introdurre un elenco */
+	position: relative;
+	
 	background-color: var(--color1);
 	border-radius: 10px 0;
 	color: var(--color3);
 	width: fit-content;
-	margin: -.5em;
 	padding: .5em;
 }
 
@@ -371,6 +372,7 @@ body {
 	background: rgba(var(--color3rgb), .9);
 	border-radius: 20px 0;
 	backdrop-filter: blur(var(--blur));
+	z-index: 2;
 }
 .bg4 {
 	background: rgba(var(--color4rgb), .9);
@@ -380,20 +382,22 @@ body {
 }
 
 .dropdown { /* usato per scegliere un luogo specifico di una categoria/sottocategoria */
-  position: relative;
-  display: inline-block;
-  width: fit-content;
+  	position: relative;
+  	display: inline-block;
+  	width: fit-content;
+  	z-index: 2;
 }
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: var(--color3);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  	display: none;
+  	position: absolute;
+  	background-color: var(--color3);
+  	min-width: 160px;
+  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  	padding: 12px 16px;
+  	z-index: 3;
 }
 .dropdown:hover .dropdown-content { /* così appare quando ci metto il mouse sopra */
-  display: block;
+  	display: block;
 }
 
 .subcategory { /* per nascondere l'elenco di sottocategorie di una categoria quando non è scelta '*/
